# Opdracht-5-GTK

./: CMakeLists.txt  Layout.glade  README.md  layout.glade  main.c
